--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<header>
-		<h1>Join me in supporting my Charity program!/h1>
+		<h1>Join me in supporting my Charity program!</h1>
 	</header>
 	<section>
 		<p>I am supporting this charity organization because:</p>
